[tool.poetry]
name = "WebinarRu"
version = "0.0.5"
description = "Python client for webinar.ru platform"
authors = ["gulyaeve <gulyaev.e@icloud.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "WebinarRu"}]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9.3"
pydantic = "^2.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
Homepage = "https://github.com/gulyaeve/WebinarRu"
Repository = "https://github.com/gulyaeve/WebinarRu"