[tool.poetry]
name = "WebinarRu"
version = "0.1.1"
description = "Python client for webinar.ru (mts-link.ru) platform"
authors = ["gulyaeve <gulyaev.e@icloud.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "WebinarRu"}]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9.3"
pydantic = "^2.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "WebinarRu"
version = "0.1.1"
authors = [
  { name="Eugene Gulyaev", email="gulyaev.e@icloud.com" },
]
description = "Python client for webinar.ru (mts-link.ru) platform"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/gulyaeve/WebinarRu"
Repository = "https://github.com/gulyaeve/WebinarRu"
Issues = "https://github.com/gulyaeve/WebinarRu/issues"

